--- a/main.css
+++ b/main.css
@@ -19,6 +19,7 @@ body {
   justify-content: center;
   align-items: center;
   transform-origin: center;
+  box-shadow: 50px 200px 60px rgba(0, 0, 0, 0.8);
 }
 
 .rotate-div {
@@ -54,7 +55,7 @@ body {
   position: absolute;
   top: 50%;
   left: 50%;
-  background-color: green;
+  background-color: black;
   width: 110%;
   height: 110%;
   transform-style: preserve-3d;
@@ -66,7 +67,7 @@ body {
   top: 50%;
   left: 50%;
   background-color: black;
-  border: 5px solid #222;
+  border: 8px solid #222;
   width: 40%;
   height: 40%;
   display: flex;
@@ -74,7 +75,7 @@ body {
   align-items: center;
   transform-style: preserve-3d;
   border-radius: 50%;
-  transform: rotateY(180deg) translateZ(min(38vh, 38vw))  translate(-50%, -50%);
+  transform:  translate(-50%, -50%) rotateY(180deg) translateZ(min(38vh, 38vw));
 }
 
 .message-circle::before {
@@ -82,18 +83,42 @@ body {
   position: absolute;
   top: 50%;
   left: 50%;
-  background-color: red;
-  width: 110%;
-  height: 110%;
+  background-color: black;
+  width: 130%;
+  height: 130%;
   transform-style: preserve-3d;
-  transform: rotateY(180deg) translateZ(-1px) translate(-50%, -50%);
+  transform: translateZ(-1px) translate(-50%, -50%) rotateY(180deg);
+}
+
+.light-spot {
+  width: 40%;
+  height: 40%;
+  position: absolute;
+  top: 10%;
+  left: 10%;
+  background-image: radial-gradient(circle, white 20%, lightgray, black);
+  opacity: 0.35;
+  border-radius: 50%;
+  filter: blur(80px);
 }
 
 @keyframes rotate {
   0% {
-    transform: rotateY(360deg);
+    transform: perspective(2000px) rotateY(360deg);
   }
   100% {
-    transform: rotateY(0deg);
+    transform: perspective(2000px) rotateY(0deg);
+  }
+}
+
+@media (max-width: 600px) and (min-width: 401px) {
+  .light-spot {
+    filter: blur(50px);
+  }
+}
+
+@media (max-width: 400px) {
+  .light-spot {
+    filter: blur(30px);
   }
 }
